--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
   "name": "zerotwo",
-  "productName": "ZeroTwo",
   "version": "0.7.0b",
-  "author": "NicoAiko <nicoaiko@zerotwo.org>",
   "description": "Taiga alternative",
-  "license": "GPL-3.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NicoAiko/zerotwo"
-  },
-  "bugs": {
-    "url": "https://github.com/NicoAiko/zerotwo/issues"
-  },
+  "author": "NicoAiko <nicoaiko@zerotwo.org>",
   "scripts": {
     "serve": "vue-cli-service electron:serve",
     "build": "vue-cli-service electron:build",
@@ -19,14 +10,15 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "axios": "^0.19.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
-    "vue-i18n": "^8.11.2",
+    "vue-i18n": "^8.12.0",
     "vue-notification": "^1.3.16",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.7",
@@ -36,35 +28,49 @@
     "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
-    "@mdi/font": "^3.7.95",
-    "@types/lodash": "^4.14.135",
-    "@types/request": "^2.48.1",
+    "@mdi/font": "^3.8.95",
+    "@types/lodash": "^4.14.136",
+    "@types/request": "^2.48.2",
     "@types/uuid": "^3.4.5",
-    "@types/webpack": "^4.4.34",
-    "@vue/cli-plugin-babel": "^3.9.0",
+    "@types/webpack": "^4.32.1",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
     "@vue/cli-plugin-pwa": "^3.9.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-service": "^3.9.3",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "babel-eslint": "^10.0.1",
     "electron": "^4.2.6",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "fibers": "^3.1.1",
-    "husky": "^3.0.0",
-    "sass": "^1.22.3",
+    "husky": "^3.0.1",
+    "sass": "^1.22.7",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.5.2",
-    "typescript-tslint-plugin": "^0.5.3",
+    "typescript": "^3.5.3",
     "vue-cli-plugin-electron-builder": "^1.3.6",
     "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.3.0"
   },
-  "main": "background.js",
+  "bugs": {
+    "url": "https://github.com/NicoAiko/zerotwo/issues"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
     }
+  },
+  "license": "GPL-3.0",
+  "productName": "ZeroTwo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NicoAiko/zerotwo"
   }
 }
