--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "Taiga alternative",
   "author": "NicoAiko <nicoaiko@zerotwo.org>",
   "scripts": {
-    "serve": "vue-cli-service electron:serve",
-    "build": "vue-cli-service electron:build",
-    "lint": "vue-cli-service lint --no-fix",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint --no-fix"
   },
-  "main": "background.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "uuid": "^3.3.3",
@@ -21,14 +19,14 @@
     "vue-i18n": "^8.14.0",
     "vue-notification": "^1.3.16",
     "vue-property-decorator": "^8.2.2",
-    "vue-router": "^3.1.2",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.0.11",
     "vuex": "^3.1.1",
     "vuex-class-component": "^1.9.0",
-    "vuex-persist": "^2.0.1"
+    "vuex-persist": "^2.1.0"
   },
   "devDependencies": {
-    "@mdi/font": "^3.9.97",
+    "@mdi/font": "^4.2.95",
     "@types/lodash": "^4.14.138",
     "@types/request": "^2.48.2",
     "@types/uuid": "^3.4.5",
@@ -42,7 +40,6 @@
     "@vue/eslint-config-airbnb": "^4.0.1",
     "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "electron": "^4.2.9",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "fibers": "^3.1.1",
@@ -51,8 +48,7 @@
     "sass-loader": "^7.3.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.5.3",
-    "vue-cli-plugin-electron-builder": "^1.4.0",
+    "typescript": "^3.6.2",
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
